fixade z-index så att den var rätt och gjorde bildspelet lite mindre.

--- a/CSS/CSSslideshow.css
+++ b/CSS/CSSslideshow.css
@@ -1,20 +1,20 @@
 #container {
 	position:relative;
-	height:450px;
-	width:650px;
+	height:413px;
+	width:550px;
 	margin:20px auto;
-	z-index: -1;
 }
 
 #slideshowimg{
 	position:absolute;
-	height:450px;
-	width:650px;
+	height:413px;
+	width:550px;
+	z-index: -1;
 }
 
 #leftButton{
 	position:absolute;
-	height:450px;
+	height:413px;
 	width:100px;
 	left:0px;
 	top:0px;
@@ -22,7 +22,7 @@
 
 #rightButton{
 	position:absolute;
-	height:450px;
+	height:413px;
 	width:100px;
 	right:0px;
 	top:0px;
@@ -51,7 +51,6 @@
 	transition: opacity .25s ease-in-out;
 	-moz-transition: opacity .25s ease-in-out;
 	-webkit-transition: opacity .25s ease-in-out;
-	
 }
 
 #container:hover .right{
@@ -59,5 +58,4 @@
 	transition: opacity .25s ease-in-out;
 	-moz-transition: opacity .25s ease-in-out;
 	-webkit-transition: opacity .25s ease-in-out;
-	
 }
